--- a/app/src/main/res/layout/item_dialog_edit_text.xml
+++ b/app/src/main/res/layout/item_dialog_edit_text.xml
@@ -12,11 +12,12 @@
         android:hint="@string/category"
         android:theme="@style/myEditText"
         app:endIconMode="clear_text"
-        app:placeholderText="ex)Short Sleeve, Shirt">
+        app:placeholderText="ex)Short Sleeve or Nike">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editText_dialog"
             android:layout_width="match_parent"
+            android:inputType="text"
             android:layout_height="wrap_content"
             android:imeOptions="actionDone" />
     </com.google.android.material.textfield.TextInputLayout>
