--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,25 +16,20 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                app:menu="@menu/mainfragment_menu"
-                app:title="Category"
-                app:titleTextAppearance="@style/myToolbarTitleStyle" />
-            <!--            behavior를 정의하면 앱바랑 분리됨-->
+                android:layout_height="match_parent"
+                app:titleTextAppearance="@style/myToolbarTitleStyle"
+                tools:title="Category" />
         </com.google.android.material.appbar.AppBarLayout>
-
+        <!--behavior 정의하면 앱바랑 분리됨-->
         <fragment
             android:id="@+id/host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/_36sdp"
+            android:layout_marginBottom="@dimen/_38sdp"
             app:defaultNavHost="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:navGraph="@navigation/nav_graph" />
-
-        <!--        behavior 정의-->
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
