--- a/app/src/main/res/layout/item_main_fragment_child.xml
+++ b/app/src/main/res/layout/item_main_fragment_child.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,14 +9,13 @@
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+
         android:clickable="true"
-        android:foreground="?attr/selectableItemBackground">
-<!--        android:text="@{childCategory.childCategory}"-->
+        android:foreground="?attr/selectableItemBackground"
+         >
         <TextView
             android:id="@+id/child_text"
             android:layout_width="wrap_content"
