--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,13 +10,6 @@
         android:label="CATEGORY"
         tools:layout="@layout/fragment_main">
         <action
-            android:id="@+id/action_mainFragment_to_addCategoryActivity"
-            app:destination="@id/AddCategoryActivity"
-            app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_fade_exit"
-            app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit" />
-        <action
             android:id="@+id/action_mainFragment_to_listFragment"
             app:destination="@id/listFragment"
             app:enterAnim="@anim/fragment_fade_enter"
@@ -26,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="com.example.project_myfit.ui.favorite.FavoriteFargment"
+        android:name="com.example.project_myfit.ui.favorite.FavoriteFragment"
         android:label="Favorite"
         tools:layout="@layout/fragment_favorite" />
     <fragment
@@ -34,15 +27,10 @@
         android:name="com.example.project_myfit.ui.Average.AverageFragment"
         android:label="Setting"
         tools:layout="@layout/fragment_setting" />
-    <activity
-        android:id="@+id/AddCategoryActivity"
-        android:name="com.example.project_myfit.ui.main.category_activity.AddCategoryActivity"
-        android:label="ADD CATEGORY"
-        tools:layout="@layout/activity_add_category" />
     <fragment
         android:id="@+id/listFragment"
         android:name="com.example.project_myfit.ui.main.listfragment.ListFragment"
-        tools:layout="@layout/fragment_list" >
+        tools:layout="@layout/fragment_list">
         <action
             android:id="@+id/action_listFragment_to_inputFragment"
             app:destination="@id/inputFragment"
@@ -61,7 +49,7 @@
     <fragment
         android:id="@+id/inputFragment"
         android:name="com.example.project_myfit.ui.main.listfragment.inputfragment.InputFragment"
-        tools:layout="@layout/fragment_input" >
+        tools:layout="@layout/fragment_input">
         <action
             android:id="@+id/action_inputFragment_to_listFragment"
             app:destination="@id/listFragment"
@@ -76,5 +64,15 @@
         android:id="@+id/outputFragment"
         android:name="com.example.project_myfit.ui.main.listfragment.outputfragment.OutputFragment"
         android:label="output_fragment"
-        tools:layout="@layout/fragment_input" />
+        tools:layout="@layout/fragment_input">
+        <action
+            android:id="@+id/action_outputFragment_to_listFragment"
+            app:destination="@id/listFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit"
+            app:popUpTo="@id/listFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
