--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,7 +23,7 @@
         android:label="Favorite"
         tools:layout="@layout/fragment_favorite" />
     <fragment
-        android:id="@+id/averageFragment"
+        android:id="@+id/settingFragment"
         android:name="com.example.project_myfit.ui.Average.AverageFragment"
         android:label="Setting"
         tools:layout="@layout/fragment_setting" />
