--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinator_layout"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp"
-            android:elevation="@dimen/_8sdp">
+            android:layout_height="@dimen/_36sdp">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:titleTextAppearance="@style/myToolbarTitleStyle"
-                tools:title="Category" />
+                app:titleTextAppearance="@style/myToolbarTitleStyle" />
         </com.google.android.material.appbar.AppBarLayout>
         <!--behavior 정의하면 앱바랑 분리됨-->
         <fragment
@@ -34,13 +31,14 @@
             app:navGraph="@navigation/nav_graph" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+
             android:id="@+id/bottom_nav"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_38sdp"
             android:layout_gravity="bottom"
             android:theme="@style/myBottomNav"
+            app:elevation="@dimen/_8sdp"
             app:labelVisibilityMode="unlabeled"
-            app:layout_dodgeInsetEdges="bottom"
             app:menu="@menu/bottom_nav_menu" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
