--- a/app/src/main/res/layout/item_list_fragment.xml
+++ b/app/src/main/res/layout/item_list_fragment.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cardView"
+            android:id="@+id/item_parent_root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_12sdp"
