--- a/app/src/main/res/layout/item_dialog_edit_text.xml
+++ b/app/src/main/res/layout/item_dialog_edit_text.xml
@@ -12,7 +12,7 @@
         android:hint="@string/category"
         android:theme="@style/myEditText"
         app:endIconMode="clear_text"
-        app:placeholderText="ex)Short Sleeve or Nike">
+        app:placeholderText="ex)Short Sleeve">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editText_dialog"
