--- a/app/src/main/res/layout/item_main_fragment_parent.xml
+++ b/app/src/main/res/layout/item_main_fragment_parent.xml
@@ -1,47 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:foreground="?attr/selectableItemBackground">
 
-    <data>
-
-        <variable
-            name="parentCategory"
-            type="com.example.project_myfit.ui.main.database.ParentCategory" />
-    </data>
-
-    <FrameLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/parent_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_marginVertical="@dimen/_8sdp"
+        android:includeFontPadding="false"
+        android:textSize="@dimen/_18sdp"
+        tools:text="Top" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/add_icon"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
+        android:layout_gravity="end|center_vertical"
+        android:layout_marginEnd="@dimen/_12sdp"
         android:clickable="true"
-        android:foreground="?attr/selectableItemBackground">
+        android:foreground="?attr/selectableItemBackground"
+        app:srcCompat="@drawable/icon_add"
+        app:tint="?attr/colorControlNormal" />
 
-        <TextView
-            android:id="@+id/parent_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:includeFontPadding="false"
-            android:textSize="@dimen/_18sdp"
-            tools:text="Top" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_gravity="bottom"
+        android:background="@color/dark_gray2" />
+</FrameLayout>
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/add_icon"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="@dimen/_12sdp"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
-            app:srcCompat="@drawable/icon_add"
-            app:tint="?attr/colorControlNormal" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_gravity="bottom"
-            android:background="@color/dark_gray2" />
-    </FrameLayout>
-</layout>
