--- a/app/src/main/res/layout/title_main.xml
+++ b/app/src/main/res/layout/title_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:includeFontPadding="false"
-        android:text="@string/myFit"
+        android:text="@string/app_name"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold" />
 
