--- a/app/src/main/res/layout/item_dialog_edit_text.xml
+++ b/app/src/main/res/layout/item_dialog_edit_text.xml
@@ -1,24 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+    <data>
+
+        <variable
+            name="hint"
+            type="String" />
+
+        <variable
+            name="setText"
+            type="String" />
+
+        <variable
+            name="placeHolder"
+            type="String" />
+    </data>
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_20sdp"
-        android:hint="@string/category"
-        android:theme="@style/myEditText"
-        app:endIconMode="clear_text"
-        app:placeholderText="ex)Short Sleeve">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editText_dialog"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionDone"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
-</FrameLayout>
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:hint="@{hint}"
+            android:theme="@style/myEditText"
+            app:counterEnabled="true"
+            app:counterMaxLength="15"
+            app:endIconMode="clear_text"
+            app:placeholderText="@{placeHolder}">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editText_dialog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:maxLength="15"
+                android:text="@{setText}" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </FrameLayout>
+</layout>
